--- a/sass/templates/_button-up.sass
+++ b/sass/templates/_button-up.sass
@@ -1,5 +1,6 @@
 .button-up
     display:none
+    z-index: 200
     right: 0
     margin: 0
     position: fixed
