--- a/sass/templates/_thank-u-pop-up.sass
+++ b/sass/templates/_thank-u-pop-up.sass
@@ -1,6 +1,6 @@
 .t-modal
-    opacity: 1
-    // visibility: hidden
+    opacity: 0
+    visibility: hidden
     position: fixed
     z-index: 200
     left: 0
